# lab2_oop

./: .gitignore  CMakeLists.txt  README.md  laba_SAT1.pro  main.cpp
data/: Sat_ex11_3.pla  Sat_ex12_3.pla  Sat_ex13_3.pla  Sat_ex14_3.pla  sat_ex_1.pla  sat_ex_2.pla
src/: BBV.cpp  BBV.h  BranchingStrategy.cpp  BranchingStrategy.h  NodeBoolTree.h  allocator_stress_test.cpp  boolequation.cpp  boolequation.h  boolinterval.cpp  boolinterval.h  main.cpp
